--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -240,85 +240,64 @@
                                     </fb:FilterGroupItem>
                                 </fb:filterGroupItems>
                             </fb:FilterBar>
-
-                            <FlexBox
+                            <l:Grid
                                 id="idBedTypeFlex"
-                                wrap="Wrap"
-                                direction="Row"
-                                justifyContent="SpaceAround"
-                                alignItems="Start"
-                                items="{path: 'VisibilityModel>/BedTypes'}"
-                                busyIndicatorDelay="0"
+                                defaultSpan="XL3 L4 M6 S12"
+                                containerQuery="true"
+                                hSpacing="2"
+                                vSpacing="2"
+                                content="{path: 'VisibilityModel>/BedTypes'}"
                             >
-                                <items>
-                                    <VBox
-                                        class="bedCard sapUiMediumMargin"
-                                        visible="{VisibilityModel>Visible}"
-                                    >
-                                        <Carousel
-                                            height="300px"
-                                            width="100%"
-                                            loop="true"
-                                            showPageIndicator="false"
-                                            backgroundDesign="Transparent"
-                                            pages="{VisibilityModel>Images}"
-                                        
-                                        >
-                                            <pages>
-                                                <VBox class="imageWrapper">
-                                                    <!-- Area Tag inside Image -->
-                                                    <HBox class="areaTagBox">
-                                                        <Text
-                                                          text="{VisibilityModel>Area}"
-
-                                                        />
-                                                    </HBox>
-
-                                                    <!-- Image -->
-                                                    <Image
-                                                        src="{VisibilityModel>src}"
-                                                        width="100%"
-                                                        height="300px"
-                                                        class="bedCardImage"
-                                                        decorative="false"
-                                                    />
-                                                </VBox>
-                                            </pages>
-                                        </Carousel>
-                                        <VBox
-                                            class="bedCardContent sapUiSmallMargin"
-                                        >
-                                            <Text
-                                                text="{= ${VisibilityModel>Name} + ' (' + ${VisibilityModel>ACType} + ')' }"
-                                                class="bedCardTitle"
-                                            />
-                                            <Text
-                                                text="{VisibilityModel>Description}"
-                                                class="bedCardDesc"
-                                            />
-                                            <Text
-                                                text="{= ${VisibilityModel>Currency} + ${VisibilityModel>Price}}"
-                                                class="bedCardPrice sapUiSmallMarginTop"
-                                            />
-                                            <HBox
-                                                justifyContent="Center"
-                                                alignItems="Center"
-                                            >
-                                                <Button
-                                                    text="View Details"
-
-                                                    type="Default"
-                                                    press=".viewDetails"
-                                                    enabled="{VisibilityModel>Visible}"
-                                                    class="{= ${VisibilityModel>Visible} ? '' : 'soldOutButton' }"
-                                                />
+                            <VBox class="bedCard" visible="{VisibilityModel>Visible}">
+                                <!-- ===== IMAGE CAROUSEL ===== -->
+                                <Carousel
+                                    height="300px"
+                                    width="100%"
+                                    loop="true"
+                                    showPageIndicator="false"
+                                    backgroundDesign="Transparent"
+                                    pages="{VisibilityModel>Images}"
+                                >
+                                    <pages>
+                                        <VBox class="imageWrapper">
+                                            <!-- Area Tag -->
+                                            <HBox class="areaTagBox">
+                                                <Text text="{VisibilityModel>Area}" />
                                             </HBox>
+                                            <!-- Image -->
+                                            <Image
+                                                src="{VisibilityModel>src}"
+                                                width="100%"
+                                                height="300px"
+                                                class="bedCardImage"
+                                                decorative="false"
+                                            />
                                         </VBox>
-                                    </VBox>
-                                </items>
-                            </FlexBox>
-                       
-                        <!-- </l:Grid> -->
+                                    </pages>
+                                </Carousel>
+                                <!-- ===== CARD CONTENT ===== -->
+                                <VBox class="bedCardContent">
+                                    <Text
+                                        text="{= ${VisibilityModel>Name} + ' (' + ${VisibilityModel>ACType} + ')' }"
+                                        class="bedCardTitle"
+                                    />
+                                    <Text text="{VisibilityModel>Description}" class="bedCardDesc" />
+                                    <Text
+                                        text="Starting At{= ${VisibilityModel>Currency} + ${VisibilityModel>Price}}"
+                                        class="bedCardPrice"
+                                    />
+                                    <HBox justifyContent="Center" alignItems="Center">
+                                        <Button
+                                            text="View Details"
+                                            type="Default"
+                                            press=".viewDetails"
+                                            class="viewBtn"
+                                            enabled="{VisibilityModel>Visible}"
+                                        />
+                                    </HBox>
+                                </VBox>
+                            </VBox>
+                        </l:Grid>
                     </Page>
                     <ScrollContainer
                         id="idFacilities"
