Refactor code structure for improved readability and maintainability

--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -298,6 +298,12 @@
                                 </VBox>
                             </VBox>
                         </l:Grid>
+                          <IllustratedMessage
+                            visible="{VisibilityModel>/NoData}"
+                            illustrationType="sap.m.IllustratedMessageType.NoData"
+                            title="No Rooms Found"
+                            description="Please select another Branch or City."
+                        />
                     </Page>
                     <ScrollContainer
                         id="idFacilities"
