Implement onClearAndSearch function: add filter clearing functionality across multiple controllers and update relevant filter IDs in views and fragments

--- a/project1/webapp/view/Bed_Details.view.xml
+++ b/project1/webapp/view/Bed_Details.view.xml
@@ -15,7 +15,7 @@
 		</headerContent>
 		<content>
 			<fb:FilterBar
-                id="PO_id_FilterbarEmployee"
+                id="BD_id_FilterbarEmployee"
                 persistencyKey="myPersKey"
                 useToolbar="false"
                 clear="PO_onPressClear"
