--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -282,10 +282,8 @@
                                         class="bedCardTitle"
                                     />
                                     <Text text="{VisibilityModel>Description}" class="bedCardDesc" />
-                                    <Text
-                                        text="Starting At{= ${VisibilityModel>Currency} + ${VisibilityModel>Price}}"
-                                        class="bedCardPrice"
-                                    />
+                                    <Text text="{parts: ['VisibilityModel>Currency','VisibilityModel>Price'],
+                                    formatter: '.Formatter.formatStartingPrice'}" class="bedCardPrice"/>
                                     <HBox justifyContent="Center" alignItems="Center">
                                         <Button
                                             text="View Details"
