--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -24,7 +24,7 @@
                 <!-- <Title level="H1" text="SHAH HOSTEL" class="custom-text"/> -->
                 <ToolbarSpacer />
                 <Button
-                    text="SIGN IN / SIGN UP"
+                    text="SIGN IN / UP"
                     id="loginButton"
                     class=" sapUiSmallMarginTop loginButton"
                     tooltip="{i18n>tooltipLogin}"
