--- a/project1/webapp/view/Book_RoomSummary.view.xml
+++ b/project1/webapp/view/Book_RoomSummary.view.xml
@@ -77,14 +77,14 @@
         <!-- Totals for THIS person (NOTE: all RELATIVE, no leading "/") -->
         <VBox class="sapUiSmallMarginTop">
             <HBox justifyContent="End" class="sapUiSmallMarginTop">
-                <Label text="Total Cost:" design="Bold" class="sapUiSmallMarginEnd"/>
+                <Label text="Total Cost:" class="totalColumnBold sapUiSmallMarginEnd"/>
                 <Text text="{
                   parts: [
         'HostelModel>/OverallTotalCost',
         'HostelModel>/Currency'
     ],
                     formatter: '.Formatter.formatCurrency'
-                }" class="sapUiSmallMarginEnd"/>
+                }" class="totalColumnBold sapUiSmallMarginEnd"/>
               
             </HBox>
            
