--- a/project1/webapp/view/AdminDetails.view.xml
+++ b/project1/webapp/view/AdminDetails.view.xml
@@ -115,8 +115,8 @@
 							<Toolbar>
 								<Title text="Booking Details" level="H5" />
 								<ToolbarSpacer />
-									<Button icon="sap-icon://add" text="Add" press="onAddFacilityDetails" type="Accept"/>
-								<Button icon="sap-icon://edit" text="Edit" press="onEditFacilityDetails" type="Emphasized"/>
+									<Button text="Add" press="onAddFacilityDetails" class="myUnifiedBtn"/>
+								<Button text="Edit" press="onEditFacilityDetails" class="myUnifiedBtn"/>
 							
 
 							</Toolbar>
