--- a/project1/webapp/view/FacilitiesDetails.view.xml
+++ b/project1/webapp/view/FacilitiesDetails.view.xml
@@ -188,6 +188,7 @@
                                                 style="Transparent"
                                                 tooltip="Add Image"
                                                 placeholder=" "
+                                                class="myUnifiedBtn"
                                                 buttonOnly="true"
                                                 sameFilenameAllowed="true"
                                                 visible="{= ${DisplayImagesModel>isPlaceholder} === true &amp;&amp; ${editable>/Edit} === true }"
@@ -197,7 +198,7 @@
 										<!-- Delete icon -->
 										<m:Button
                                             icon="sap-icon://delete"
-                                            type="Reject"
+                                            class="myUnifiedBtn"
                                             visible="{= ${editable>/Edit} === true &amp;&amp; ${DisplayImagesModel>isPlaceholder} === false }"
                                             press=".onDeleteImage"
                                             tooltip="Delete Image"
@@ -218,14 +219,14 @@
                         id="FD_id_editButton"
                         visible="{= !${editable>/Edit} }"
                         text="Edit"
-                        type="Transparent"
+                        class="myUnifiedBtn"
                         press="BI_onEditButtonPress"
                     />
 					<m:Button
                         id="FD_id_SaveButton"
                         visible="{=${editable>/Edit}}"
                         text="Save"
-                        type="Accept"
+                        class="myUnifiedBtn"
                         press="BT_onsavebuttonpress"
                     />
 				</m:contentRight>
