--- a/project1/webapp/view/Student_Details.view.xml
+++ b/project1/webapp/view/Student_Details.view.xml
@@ -131,12 +131,12 @@
                         <Button
                             text="Assign Rooms"
                             press="PO_onCreatePurchaseOrder"
-                            type="Transparent"
+                            class="myUnifiedBtn"
                         />
                         <Button
                             text="Delete"
                             press="PO_onDeleteButtonPress"
-                            type="Transparent"
+                            class="myUnifiedBtn"
                         />
                    
                     </OverflowToolbar>
